--- a/style.css
+++ b/style.css
@@ -1,7 +1,7 @@
 a {color:#333;}
 h1 {font-family:"Noto Sans",sans-serif; font-size:38px; font-weight:600; line-height:1; margin:0; padding:0; letter-spacing:-2px;}
 h2 {font-family:"Noto Sans",sans-serif; font-size:30px; font-weight:300; line-height:1; margin:0; padding:0; letter-spacing:0;}
-h3 {font-family:"Noto Sans",sans-serif; font-size:22px; font-weight:400; line-height:1; margin:0; padding:0;}
+h3 {font-family:"Noto Sans",sans-serif; font-size:22px; font-weight:200; line-height:1; margin:0; padding:5px 0 10px 0;}
 h4 {font-family:"Noto Sans",sans-serif; font-size:14px; font-weight:800; line-height:1; margin:0; padding:0;}
 p {font-family:"Noto Sans",sans-serif; font-size:18px; font-weight:400; line-height:1.4; margin:0; padding:0;}
 hr {border:none; height:1px; background-color:#333; margin:2px auto 15px auto; padding:0; width:100%;}
@@ -45,7 +45,10 @@ nav a {color:white; text-decoration:none; font-size:14px; line-height:0.8; paddi
 .footer {box-sizing:border-box; padding:50px 10px; background-color:#176B87; color:#fff; text-align:left;}
 .footer hr{background-color:#fff;}
 .footer a{color:#fff;}
-.footer h3{font-size:10px; padding:12px 0 0 0;}
+.footer h4{font-size:10px; font-weight:600; margin:0; padding:12px 0 0 0;}
 
 
-.tag{display:inline-block; color:#40404b; padding:2px 3px 1px 3px; margin:0; position:relative; top:-2px; background-color:#eee;}
+.tag-blue{display:inline-block; color:#fff; padding:2px 3px 1px 3px; margin:2px; position:relative; top:-2px; background-color:#3498db;}
+.tag-green{display:inline-block; color:#fff; padding:2px 3px 1px 3px; margin:2px; position:relative; top:-2px; background-color:#2ecc71;}
+.tag-orange{display:inline-block; color:#fff; padding:2px 3px 1px 3px; margin:2px; position:relative; top:-2px; background-color:#f39c12;}
+.tag-red{display:inline-block; color:#fff; padding:2px 3px 1px 3px; margin:2px; position:relative; top:-2px; background-color:#e74c3c;}
