--- a/style.css
+++ b/style.css
@@ -22,7 +22,7 @@ header {box-sizing:border-box; display:flex; justify-content:space-between; alig
 .text-background-black {display:inline-block; background-color:rgba(0,0,0,0.5); margin:0; padding:0 2px;}
 .text-background-white {display:inline-block; background-color:rgba(255,255,255,0.5); margin:0; padding:0 2px;}
 
-.image-container{display:flex; overflow:hidden; position:relative; height:auto; width:100%; margin:0 auto; align-items:center; justify-content:center;}
+.image-container{display:flex; overflow:hidden; position:relative; height:auto; width:100%; margin:0 auto; align-items:center; justify-content:center; padding-top:35px;}
 .image {display:block; width:100%; height:auto; max-height:100%;}
 .image-small {display:block; width:50%; height:auto; max-height:100%; max-width:100%; margin:auto; border-radius:0;}
 .image-large {display:block; width:90%; height:auto; max-height:100%; max-width:100%; margin:auto; border-radius:10px;}
@@ -37,6 +37,7 @@ nav a {color:white; text-decoration:none; font-size:14px; line-height:0.8; paddi
   nav {display:none; flex-direction:column; align-items:flex-start; width:100%; background-color:#176B87; position:absolute; right:0; top:50px;}
   nav.show {display:flex;}
   .flex-column {flex:0 0 100%;}
+  .image-container{padding-top:0;}
 }
 
 .banner{color:#fff; background-color:#053B50; width:100%; height:300px; padding-top:70px; position:relative;}
